# and433

./: .gitignore  README.md
.github/workflows/: release.yml
and433_app/: README.md  pubspec.yaml
and433_app/android/app/: build.gradle.kts
and433_app/android/app/src/main/: AndroidManifest.xml
and433_app/android/app/src/main/kotlin/com/and433/and433_app/: MainActivity.kt
and433_app/android/app/src/main/res/xml/: usb_device_filter.xml
and433_app/lib/: main.dart
and433_app/lib/src/: api_433map.dart  capture_exporter.dart  gps_service.dart  rtl433_ffi_bindings.dart  rtl433_plugin.dart  sdr_intent_launcher.dart
and433_app/test/: widget_test.dart
rtl_433/android/: CMakeLists.txt
rtl_433/include/: r_api.h  rtl433_ffi.h
rtl_433/src/: output_rtltcp.c  r_api.c  rtl433_ffi.c  rtl_433.c  sdr.c
rtl_tcp_andro-/app/: build.gradle
rtl_tcp_andro-/app/release/baselineProfiles/0/: app-release.dm
rtl_tcp_andro-/app/release/baselineProfiles/1/: app-release.dm
rtl_tcp_andro-/hackrf/: build.gradle
rtl_tcp_andro-/rtlsdr/: build.gradle
rtl_tcp_andro-/rtlsdr/src/main/cpp/librtlsdr/src/: librtlsdr.c
rtl_tcp_andro-/sdrdrivertools/: build.gradle
